Fix spacing being added to the bottom of the Intro text in the header component

--- a/src/assets/scss/partial-styles/Header-Intro.scss
+++ b/src/assets/scss/partial-styles/Header-Intro.scss
@@ -60,7 +60,7 @@
   }
 
   &__intro-text {
-    margin: 0;
+    margin: 0 !important;
   }
 }
 
